[package]
name = "ilyaraz_test_crate_1"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Sample description"
repository = "https://github.com/ilyaraz/ilyaraz_test_crate_1"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
